# SEMSEG

./: .gitignore  HOW_TO_RUN.md  INSTALLATION.md  QUICK_REFERENCE.md  README.md  SEGMENTATION_GUIDE.md  __init__.py  __main__.py  create_sample_data.py  demo_gui.py  gui.py  install.bat  launch_gui.py  neuroglancer_integration.py  pyproject.toml  quick_start.py  requirements.txt  setup.py  start.bat  test_gui_load.py  test_neuroglancer_oo.py  test_sam3_fallback.py  verify_installation.py  webui.py
core/: __init__.py  config.py  data_io.py  preprocessing.py  quantification.py  segmentation.py  test_data_io.py  test_preprocessing.py  unet.py
gui/: __init__.py  main_gui.py
pipeline/: __init__.py  main_pipeline.py  test_main_pipeline.py
